--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "displayName": "vscode-chatgpt",
   "icon": "images/ai-logo.jpg",
   "description": "vscode-chatgpt",
-  "version": "3.9.7-ja",
+  "version": "4.1.3-ja",
   "aiKey": "",
   "repository": {
     "url": "https://github.com/ttrace/vscode-chatgpt"
   },
   "engines": {
-    "vscode": "^1.73.0"
+    "vscode": "^1.80.0"
   },
   "categories": [
     "Testing",
@@ -247,7 +247,8 @@
         "chatgpt.method": {
           "type": "string",
           "enum": [
-            "GPT3 OpenAI API Key"
+            "GPT3 OpenAI API Key",
+            "GPT4 OpenAI API Key"
           ],
           "default": "GPT3 OpenAI API Key",
           "markdownDescription": "Choose your integration preference.",
@@ -420,12 +421,11 @@
         "chatgpt.gpt3.model": {
           "type": "string",
           "enum": [
-            "text-davinci-002-render",
+            "gpt-4-1106-preview",
             "gpt-4",
-            "text-davinci-002-render-paid",
-            "text-davinci-002-render-sha",
+            "gpt-4-32k",
             "gpt-3.5-turbo",
-            "gpt-3.5-turbo-0301",
+            "gpt-3.5-turbo-16k",
             "text-davinci-003",
             "text-curie-001",
             "text-babbage-001",
@@ -437,12 +437,11 @@
           "markdownDescription": "OpenAI models to use for your prompts. [Documentation](https://beta.openai.com/docs/models/models). \n\n**If you face 400 Bad Request please make sure you are using the right model for your integration method.**",
           "order": 33,
           "enumItemLabels": [
-            "Browser autologin - default ChatGPT model",
-            "Browser autologin - ChatGPT Plus GPT-4",
-            "Browser autologin - ChatGPT Plus default model",
-            "Browser autologin - ChatGPT Plus legacy model",
+            "OpenAI API Key - gpt-4-1106-preview",
+            "OpenAI API Key - gpt-4",
+            "OpenAI API Key - gpt-4-32k",
             "OpenAI API Key - gpt-3.5-turbo",
-            "OpenAI API Key - gpt-3.5-turbo-0301",
+            "OpenAI API Key - gpt-3.5-turbo-16k",
             "OpenAI API Key - text-davinci-003",
             "OpenAI API Key - text-curie-001",
             "OpenAI API Key - text-babbage-001",
@@ -451,10 +450,12 @@
             "OpenAI API Key - code-cushman-001"
           ],
           "markdownEnumDescriptions": [
-            "Free Tier ChatGPT model that's used in chat.openai.com",
-            "ChatGPT Plus subscription GPT-4 model that's used in chat.openai.com. This requires a subscription on OpenAI side, please make sure you are eligible to use this model. \n\n**More capable than any GPT-3.5 model, able to do more complex tasks, and optimized for chat. Available to ChatGPT Plus users**",
+            "More capable than any GPT-3.5 model, able to do more complex tasks, and optimized for chat. Will be updated with our latest model iteration 2 weeks after it is released.",
+            "Same capabilities as the base gpt-4 mode but with 4x the context length. Will be updated with our latest model iteration.",
             "ChatGPT Plus subscription default model that's used in chat.openai.com. This requires a subscription on OpenAI side, please make sure you are eligible to use this model. \n\n**Optimized for speed, currently available to Plus users**",
             "ChatGPT Plus subscription legacy model that's used in chat.openai.com. This requires a subscription on OpenAI side, please make sure you are eligible to use this model. \n\n**The previous ChatGPT Plus model**",
+            "ChatGPT Plus experimental model that's used in chat.openai.com. This requires a subscription on OpenAI side, please make sure you are eligible to use this model. \n\n**Optimized for speed, currently available to Plus users**",
+            "ChatGPT Plus Longer token supporting model that's used in chat.openai.com. This requires a subscription on OpenAI side, please make sure you are eligible to use this model. \n\n**Optimized for speed, currently available to Plus users**",
             "Most capable GPT-3.5 model and optimized for chat at 1/10th the cost of `text-davinci-003`. Will be updated with our latest model iteration.",
             "Snapshot of `gpt-3.5-turbo` from March 1st 2023. Unlike gpt-3.5-turbo, this model will not receive updates, and will only be supported for a three month period ending on June 1st 2023."
           ]
@@ -500,46 +501,47 @@
   },
   "scripts": {
     "vscode:prepublish": "rimraf out && npm run esbuild-base -- --minify",
-    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "npm run -S esbuild-base -- --sourcemap",
-    "watch": "npm run -S esbuild-base -- --sourcemap --watch",
+    "esbuild-base": "esbuild ./src/extension.ts --target=es2020 --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+    "build": "npm run -S esbuild-base --target=es2020 -- --sourcemap",
+    "watch": "npm run -S esbuild-base --target=es2020 -- --sourcemap --watch",
     "fmt": "prettier --write \"src/**/*.ts\"&& npm run test -- --fix",
     "test": "eslint src --ext ts && tsc --noEmit"
   },
   "devDependencies": {
-    "@types/glob": "^8.0.0",
+    "@types/glob": "^8.1.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
-    "@types/uuid": "^9.0.0",
-    "@types/vscode": "^1.73.0",
-    "@types/vscode-webview": "^1.57.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vscode/test-electron": "^2.2.0",
-    "esbuild": "^0.15.18",
-    "eslint": "^8.28.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.1.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3"
+    "@types/node": "20.x",
+    "@types/uuid": "^9.0.2",
+    "@types/vscode": "^1.80.0",
+    "@types/vscode-webview": "^1.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vscode/test-electron": "^2.3.3",
+    "esbuild": "^0.18.11",
+    "eslint": "^8.44.0",
+    "glob": "^10.3.1",
+    "mocha": "^10.2.0",
+    "rimraf": "^5.0.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "delay": "^5.0.0",
-    "eventsource-parser": "^0.1.0",
+    "delay": "^6.0.0",
+    "eventsource-parser": "^1.0.0",
     "gpt3-tokenizer": "^1.1.5",
     "isomorphic-fetch": "^3.0.0",
     "keyv": "^4.5.2",
-    "openai": "^3.1.0",
-    "p-timeout": "^6.1.1",
-    "puppeteer": "^19.4.0",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "puppeteer-extra-plugin-user-data-dir": "^2.4.0",
-    "puppeteer-extra-plugin-user-preferences": "^2.4.0",
+    "openai": "^3.3.0",
+    "p-timeout": "^6.1.2",
+    "puppeteer": "^20.8.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
+    "puppeteer-extra-plugin-user-preferences": "^2.4.1",
     "quick-lru": "^6.1.1",
-    "remark": "^14.0.2",
-    "strip-markdown": "^5.0.0",
+    "remark": "^14.0.3",
+    "strip-markdown": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "resolutions": {
