--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "vscode-chatgpt",
   "icon": "images/ai-logo.jpg",
   "description": "vscode-chatgpt",
-  "version": "4.1.3-ja",
+  "version": "4.1.5-ja",
   "aiKey": "",
   "repository": {
     "url": "https://github.com/ttrace/vscode-chatgpt"
@@ -421,8 +421,10 @@
         "chatgpt.gpt3.model": {
           "type": "string",
           "enum": [
+            "gpt-4o-mini",
+            "gpt-4o",
+            "gpt-4-turbo",
             "gpt-4",
-            "gpt-4-turbo-preview",
             "gpt-3.5-turbo",
             "gpt-3.5-turbo-16k",
             "text-davinci-003",
@@ -432,12 +434,14 @@
             "code-davinci-002",
             "code-cushman-001"
           ],
-          "default": "gpt-3.5-turbo",
+          "default": "gpt-4o",
           "markdownDescription": "OpenAI models to use for your prompts. [Documentation](https://beta.openai.com/docs/models/models). \n\n**If you face 400 Bad Request please make sure you are using the right model for your integration method.**",
           "order": 33,
           "enumItemLabels": [
+            "OpenAI API Key - gpt-4o-mini",
+            "OpenAI API Key - gpt-4o",
+            "OpenAI API Key - gpt-4-turbo",
             "OpenAI API Key - gpt-4",
-            "OpenAI API Key - gpt-4-turbo-preview",
             "OpenAI API Key - gpt-3.5-turbo",
             "OpenAI API Key - gpt-3.5-turbo-16k",
             "OpenAI API Key - text-davinci-003",
@@ -448,6 +452,9 @@
             "OpenAI API Key - code-cushman-001"
           ],
           "markdownEnumDescriptions": [
+            "Our affordable and intelligent small model for fast, lightweight tasks. GPT-4o mini is cheaper and more capable than GPT-3.5 Turbo.",
+            "Our most advanced, multimodal flagship model that’s cheaper and faster than GPT-4 Turbo. Currently points to gpt-4o-2024-05-13.",
+            "The latest GPT-4 Turbo model with vision capabilities. Vision requests can now use JSON mode and function calling. Currently points to gpt-4-turbo-2024-04-09.",
             "Same capabilities as the base gpt-4 mode but with 4x the context length. Will be updated with our latest model iteration.",
             "The latest GPT-4 model intended to reduce cases of “laziness” where the model doesn’t complete a task. Returns a maximum of 4,096 output tokens.",
             "More capable than any GPT-3.5 model, able to do more complex tasks, and optimized for chat. Will be updated with our latest model iteration 2 weeks after it is released.",
@@ -461,7 +468,7 @@
         },
         "chatgpt.gpt3.maxTokens": {
           "type": "number",
-          "default": 1024,
+          "default": 4096,
           "markdownDescription": "The maximum number of tokens to generate in the completion. \n\nThe token count of your prompt plus max_tokens cannot exceed the model's context length. Most models have a context length of 2048 tokens (except for the newest models, which support 4096). [Documentation](https://beta.openai.com/docs/api-reference/completions/create#completions/create-max_tokens) \n\n**Please enable OpenAI API Key method to use this setting.**",
           "order": 34
         },
