開発テスト

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "vscode-chatgpt",
   "icon": "images/ai-logo.jpg",
   "description": "vscode-chatgpt",
-  "version": "4.1.5-ja",
+  "version": "4.1.6-ja",
   "aiKey": "",
   "repository": {
     "url": "https://github.com/ttrace/vscode-chatgpt"
@@ -421,7 +421,8 @@
         "chatgpt.gpt3.model": {
           "type": "string",
           "enum": [
-            "gpt-4o-mini",
+            "o1",
+            "o3-mini",
             "gpt-4o",
             "gpt-4-turbo",
             "gpt-4",
@@ -438,7 +439,8 @@
           "markdownDescription": "OpenAI models to use for your prompts. [Documentation](https://beta.openai.com/docs/models/models). \n\n**If you face 400 Bad Request please make sure you are using the right model for your integration method.**",
           "order": 33,
           "enumItemLabels": [
-            "OpenAI API Key - gpt-4o-mini",
+            "OpenAI API Key - o1",
+            "OpenAI API Key - o3-mini",
             "OpenAI API Key - gpt-4o",
             "OpenAI API Key - gpt-4-turbo",
             "OpenAI API Key - gpt-4",
@@ -448,11 +450,12 @@
             "OpenAI API Key - text-curie-001",
             "OpenAI API Key - text-babbage-001",
             "OpenAI API Key - text-ada-001",
-            "OpenAI API Key - code-davinci-002",
+            "OpenAI API Key - code-davnci-002",
             "OpenAI API Key - code-cushman-001"
           ],
           "markdownEnumDescriptions": [
-            "Our affordable and intelligent small model for fast, lightweight tasks. GPT-4o mini is cheaper and more capable than GPT-3.5 Turbo.",
+            "The o1 series of models are trained with reinforcement learning to perform complex reasoning. o1 models think before they answer, producing a long internal chain of thought before responding to the user. ",
+            "o3-mini is our most recent small reasoning model, providing high intelligence at the same cost and latency targets of o1-mini. o3-mini also supports key developer features, like Structured Outputs, function calling, Batch API, and more. Like other models in the o-series, it is designed to excel at science, math, and coding tasks.",
             "Our most advanced, multimodal flagship model that’s cheaper and faster than GPT-4 Turbo. Currently points to gpt-4o-2024-05-13.",
             "The latest GPT-4 Turbo model with vision capabilities. Vision requests can now use JSON mode and function calling. Currently points to gpt-4-turbo-2024-04-09.",
             "Same capabilities as the base gpt-4 mode but with 4x the context length. Will be updated with our latest model iteration.",
@@ -515,40 +518,40 @@
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
-    "@types/isomorphic-fetch": "^0.0.36",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "20.x",
-    "@types/uuid": "^9.0.2",
-    "@types/vscode": "^1.80.0",
-    "@types/vscode-webview": "^1.57.1",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@vscode/test-electron": "^2.3.3",
-    "esbuild": "^0.18.11",
-    "eslint": "^8.44.0",
-    "glob": "^10.3.1",
-    "mocha": "^10.2.0",
-    "rimraf": "^5.0.1",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
+    "@types/isomorphic-fetch": "^0.0.39",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "22.x",
+    "@types/uuid": "^10.0.0",
+    "@types/vscode": "^1.96.0",
+    "@types/vscode-webview": "^1.57.5",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
+    "glob": "^11.0.1",
+    "mocha": "^11.1.0",
+    "rimraf": "^6.0.1",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "delay": "^6.0.0",
-    "eventsource-parser": "^1.0.0",
+    "eventsource-parser": "^3.0.0",
     "gpt3-tokenizer": "^1.1.5",
     "isomorphic-fetch": "^3.0.0",
-    "keyv": "^4.5.2",
-    "openai": "^3.3.0",
-    "p-timeout": "^6.1.2",
-    "puppeteer": "^20.8.0",
+    "keyv": "^5.2.3",
+    "openai": "^4.82.0",
+    "p-timeout": "^6.1.4",
+    "puppeteer": "^24.1.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "puppeteer-extra-plugin-user-preferences": "^2.4.1",
-    "quick-lru": "^6.1.1",
-    "remark": "^14.0.3",
-    "strip-markdown": "^5.0.1",
-    "uuid": "^9.0.0"
+    "quick-lru": "^7.0.0",
+    "remark": "^15.0.1",
+    "strip-markdown": "^6.0.0",
+    "uuid": "^11.0.5"
   },
   "resolutions": {
     "clone-deep": "^4.0.1"
