model string from settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,4 +33,5 @@
     "[css]": {
         "editor.defaultFormatter": "vscode.css-language-features"
     },
+    "chatgpt.gpt3.model": "o3-mini",
 }
